--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "jest": "^29.6.0",
-    "@types/jest": "^29.5.2",
-    "ts-jest": "^29.0.5"
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "express",
