--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.5.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
